# em2native-integ

./: .gitmodules
proj/: projwrap.cmake
proj/angle/: CMakeLists.txt
proj/glslang/: CMakeLists.txt
proj/sdl2/: CMakeLists.txt
scripts/: _initworkspace.cmake
